--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+}
+
+.thumbnail {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    overflow: hidden;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.text-right {
+    text-align: right !important;
+}
