--- a/src/app/views/dashboard/new-product/new-product.component.html
+++ b/src/app/views/dashboard/new-product/new-product.component.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="form-group">
                     <label>Fecha Revisión</label>
-                    <input formControlName="date_revision" [disabled]="true">
+                    <input formControlName="date_revision">
                     <div class="error-message"></div>
                 </div>
                 <button type="submit" class="send" [disabled]="!productForm.valid">Enviar</button>
